# Abhiscience-Workshop-Click-2-Track

./: .gitignore  Dockerfile.api  LICENSE  README.md  ecosystem.config.js  update-app.sh
.github/workflows/: ci.yml
apps/admin-web/: next.config.js  package-lock.json  package.json  tailwind.config.js
apps/admin-web/.next/: BUILD_ID  _events.json  app-build-manifest.json  build-manifest.json  (+5 more)
apps/mobile-android/: README.md  build.gradle  gradle.properties
docs/: FINAL_SUMMARY.md  HOW_WE_BUILT_THIS.md  architecture.md  implementation-roadmap.md
docs/api/: openapi.yaml
docs/deployment/: apk-build.md  hostinger.md
docs/setup/: README.md  emulator.md
infra/: docker-compose.yml
scripts/seed/: app_installations.csv  roles.csv
services/api/: .env.example  README.md  pyproject.toml  requirements.txt
services/api/app/: main.py
services/api/app/api/api/endpoints/: admin.py  analytics.py  auth.py  captures.py  job_cards.py  pending_vehicles.py  vehicles.py
services/api/app/api/api/schemas/: schemas.py
services/api/app/api/api_v1/: api.py
services/api/app/api/api_v1/endpoints/: admin.py  analytics.py  auth.py  captures.py  job_cards.py
services/api/app/core/: config.py  database.py  security.py
services/api/app/core/core/: config.py  database.py  security.py
services/api/app/models/: models.py
services/api/app/models/models/: __init__.py  models.py
services/api/app/providers/: anpr_provider.py  ocr_provider.py
services/api/app/schemas/: schemas.py
services/api/app/services/: deviation_service.py
services/api/app/static/: ocr_test.html
(+216 files in other folders)
