[project]
name = "workshop-api"
version = "0.1.0"
description = "Workshop Click-2-Track Backend API"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.0"
pydantic = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.17"
python-dotenv = "^1.0.0"
redis = {extras = ["async"], version = "^5.0.0"}
boto3 = "^1.35.0"
pillow = "^10.0.0"
httpx = "^0.27.0"
